--- a/index.html
+++ b/index.html
@@ -9,15 +9,73 @@
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom@2.0.1"></script>
   <style>
-    body { font-family: system-ui, sans-serif; margin: 0; background: #0d1117; color: #c9d1d9; line-height: 1.6; }
-    .main-title { text-align: center; color: #58a6ff; margin: 30px 0 10px; font-size: 3em; font-weight: 700; }
-    .subtitle { text-align: center; color: #8b949e; margin-bottom: 30px; font-size: 1.3em; }
-    .container { display: flex; flex-wrap: wrap; gap: 30px; max-width: 1600px; margin: 0 auto; padding: 0 20px; }
-    .chart-area { flex: 3; min-width: 700px; height: 800px; background: #161b22; border-radius: 16px; padding: 25px; box-shadow: 0 10px 40px rgba(0,0,0,0.6); }
-    .sidebar { flex: 1; min-width: 340px; background: #161b22; padding: 25px; border-radius: 16px; box-shadow: 0 10px 40px rgba(0,0,0,0.6); overflow-y: auto; max-height: 800px; }
-    .status-badge { font-size: 2em; margin: 0 0 30px; padding: 15px; border-radius: 16px; text-align: center; font-weight: 700; box-shadow: 0 6px 25px rgba(0,0,0,0.5); }
-    .price-item { margin: 20px 0; padding: 18px; border-radius: 12px; background: #21262d; transition: all 0.2s; }
-    .price-item:hover { transform: translateY(-4px); box-shadow: 0 8px 30px rgba(0,0,0,0.4); }
+    body { 
+      font-family: system-ui, sans-serif; 
+      margin: 0; 
+      background: #0d1117; 
+      color: #c9d1d9; 
+      line-height: 1.6; 
+    }
+    .main-title { 
+      text-align: center; 
+      color: #58a6ff; 
+      margin: 30px 0 10px; 
+      font-size: 3em; 
+      font-weight: 700; 
+    }
+    .subtitle { 
+      text-align: center; 
+      color: #8b949e; 
+      margin-bottom: 30px; 
+      font-size: 1.3em; 
+    }
+    .container { 
+      display: flex; 
+      flex-wrap: wrap; 
+      gap: 30px; 
+      max-width: 1600px; 
+      margin: 0 auto; 
+      padding: 0 20px; 
+    }
+    .chart-area { 
+      flex: 3; 
+      min-width: 700px; 
+      height: 800px; 
+      background: #161b22; 
+      border-radius: 16px; 
+      padding: 25px; 
+      box-shadow: 0 10px 40px rgba(0,0,0,0.6); 
+    }
+    .sidebar { 
+      flex: 1; 
+      min-width: 340px; 
+      background: #161b22; 
+      padding: 25px; 
+      border-radius: 16px; 
+      box-shadow: 0 10px 40px rgba(0,0,0,0.6); 
+      overflow-y: auto; 
+      max-height: 800px; 
+    }
+    .status-badge { 
+      font-size: 2em; 
+      margin: 0 0 30px; 
+      padding: 15px; 
+      border-radius: 16px; 
+      text-align: center; 
+      font-weight: 700; 
+      box-shadow: 0 6px 25px rgba(0,0,0,0.5); 
+    }
+    .price-item { 
+      margin: 20px 0; 
+      padding: 18px; 
+      border-radius: 12px; 
+      background: #21262d; 
+      transition: all 0.2s; 
+    }
+    .price-item:hover { 
+      transform: translateY(-4px); 
+      box-shadow: 0 8px 30px rgba(0,0,0,0.4); 
+    }
     #actionAdvice { background: #2c0e0e; color: #ff6b6b; padding: 15px; border-radius: 12px; margin-bottom: 20px; }
     .loading { color: #8b949e; text-align: center; margin: 30px 0; font-style: italic; }
     .collapsible-section { margin: 15px 0; }
@@ -135,11 +193,27 @@
         responsive: true,
         maintainAspectRatio: false,
         scales: {
-          x: { type: 'time', time: { unit: 'month' }, ticks: { maxRotation: 45, autoSkip: true, maxTicksLimit: 12 }, title: { display: true, text: 'Time' } },
+          x: { 
+            type: 'time', 
+            time: { unit: 'day' }, // Locked to daily
+            ticks: { maxRotation: 45, autoSkip: true, maxTicksLimit: 12 },
+            title: { display: true, text: 'Time' }
+          },
           y: { min: 0, max: 100, title: { display: true, text: 'Flow Cycle Index' } }
         },
         plugins: {
-          zoom: { zoom: { wheel: { enabled: true }, pinch: { enabled: true }, mode: 'xy' }, pan: { enabled: true, mode: 'xy' } },
+          zoom: {
+            zoom: {
+              wheel: { enabled: false }, // Disable wheel zoom to avoid conflict
+              drag: { enabled: true, mode: 'y' }, // Drag up/down for y-axis zoom
+              pinch: { enabled: true },
+              mode: 'y' // Only zoom y-axis with drag
+            },
+            pan: {
+              enabled: true,
+              mode: 'x' // Pan left/right on x-axis with drag
+            }
+          },
           annotation: {
             annotations: [
               { type: 'box', xMin: '2026-04', xMax: '2026-07', yMin: 80, yMax: 100, backgroundColor: 'rgba(255,0,0,0.15)', borderColor: 'red' },
@@ -168,7 +242,7 @@
       }
     });
 
-    // === PHASE HIGHLIGHT BASED ON LAST REAL DATA POINT ===
+    // === PHASE HIGHLIGHT ===
     const currentIndex = predictorIndex[predictorIndex.length - 1] || 0;
     let currentPhase = 'Complacency';
     if (currentIndex > 10) currentPhase = 'Anxiety';
@@ -192,7 +266,7 @@
       }
     });
 
-    // Yellow badge shows current phase from data
+    // Status badge shows current phase from data
     document.getElementById('statusBadge').innerHTML = `🟡 ${currentPhase}`;
     document.getElementById('statusBadge').style.background = '#ffeb3b';
     document.getElementById('statusBadge').style.color = 'white';
