--- a/index.html
+++ b/index.html
@@ -9,113 +9,28 @@
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom@2.0.1"></script>
   <style>
-    body { 
-      font-family: system-ui, sans-serif; 
-      margin: 0; 
-      background: #0d1117; 
-      color: #c9d1d9; 
-      line-height: 1.6; 
-    }
-    .main-title { 
-      text-align: center; 
-      color: #58a6ff; 
-      margin: 30px 0 10px; 
-      font-size: 3em; 
-      font-weight: 700; 
-    }
-    .subtitle { 
-      text-align: center; 
-      color: #8b949e; 
-      margin-bottom: 30px; 
-      font-size: 1.3em; 
-    }
-    .container { 
-      display: flex; 
-      flex-wrap: wrap; 
-      gap: 30px; 
-      max-width: 1600px; 
-      margin: 0 auto; 
-      padding: 0 20px; 
-    }
-    .chart-area { 
-      flex: 3; 
-      min-width: 700px; 
-      height: 800px; 
-      background: #161b22; 
-      border-radius: 16px; 
-      padding: 25px; 
-      box-shadow: 0 10px 40px rgba(0,0,0,0.6); 
-    }
-    .sidebar { 
-      flex: 1; 
-      min-width: 340px; 
-      background: #161b22; 
-      padding: 25px; 
-      border-radius: 16px; 
-      box-shadow: 0 10px 40px rgba(0,0,0,0.6); 
-      overflow-y: auto; 
-      max-height: 800px; 
-    }
-    .status-badge { 
-      font-size: 2em; 
-      margin: 0 0 30px; 
-      padding: 15px; 
-      border-radius: 16px; 
-      text-align: center; 
-      font-weight: 700; 
-      box-shadow: 0 6px 25px rgba(0,0,0,0.5); 
-    }
-    .price-item { 
-      margin: 20px 0; 
-      padding: 18px; 
-      border-radius: 12px; 
-      background: #21262d; 
-      transition: all 0.2s; 
-    }
-    .price-item:hover { 
-      transform: translateY(-4px); 
-      box-shadow: 0 8px 30px rgba(0,0,0,0.4); 
-    }
+    body { font-family: system-ui, sans-serif; margin: 0; background: #0d1117; color: #c9d1d9; line-height: 1.6; }
+    .main-title { text-align: center; color: #58a6ff; margin: 30px 0 10px; font-size: 3em; font-weight: 700; }
+    .subtitle { text-align: center; color: #8b949e; margin-bottom: 30px; font-size: 1.3em; }
+    .container { display: flex; flex-wrap: wrap; gap: 30px; max-width: 1600px; margin: 0 auto; padding: 0 20px; }
+    .chart-area { flex: 3; min-width: 700px; height: 800px; background: #161b22; border-radius: 16px; padding: 25px; box-shadow: 0 10px 40px rgba(0,0,0,0.6); }
+    .sidebar { flex: 1; min-width: 340px; background: #161b22; padding: 25px; border-radius: 16px; box-shadow: 0 10px 40px rgba(0,0,0,0.6); overflow-y: auto; max-height: 800px; }
+    .status-badge { font-size: 2em; margin: 0 0 30px; padding: 15px; border-radius: 16px; text-align: center; font-weight: 700; box-shadow: 0 6px 25px rgba(0,0,0,0.5); }
+    .price-item { margin: 20px 0; padding: 18px; border-radius: 12px; background: #21262d; transition: all 0.2s; }
+    .price-item:hover { transform: translateY(-4px); box-shadow: 0 8px 30px rgba(0,0,0,0.4); }
     #actionAdvice { background: #2c0e0e; color: #ff6b6b; padding: 15px; border-radius: 12px; margin-bottom: 20px; }
     .loading { color: #8b949e; text-align: center; margin: 30px 0; font-style: italic; }
     .collapsible-section { margin: 15px 0; }
     .collapsible-header { cursor: pointer; padding: 10px; background: #21262d; border-radius: 8px; font-weight: bold; transition: all 0.2s; }
     .collapsible-content { display: none; padding: 10px; background: #161b22; border-radius: 0 0 8px 8px; }
     .open .collapsible-content { display: block; }
-    .phase-bar { 
-      height: 60px; 
-      width: 100%; 
-      margin: 0 0 25px 0; 
-      border-radius: 16px; 
-      overflow: hidden; 
-      background: #1f2937; 
-      display: flex; 
-      box-shadow: 0 6px 25px rgba(0,0,0,0.5); 
-    }
-    .phase-segment { 
-      flex: 1; 
-      display: flex; 
-      align-items: center; 
-      justify-content: center; 
-      font-weight: bold; 
-      color: white; 
-      text-shadow: 1px 1px 3px black; 
-      font-size: 0.9em; 
-      transition: all 0.3s; 
-      border: 1px solid transparent; 
-    }
-    .phase-segment:hover { 
-      transform: scale(1.05); 
-      box-shadow: inset 0 0 15px rgba(255,255,255,0.4); 
-    }
-    .current-phase { 
-      background: #22c55e !important; 
-      border: 3px solid #86efac; 
-      box-shadow: inset 0 0 20px rgba(255,255,255,0.5); 
-      font-size: 1.1em; 
-      font-weight: 900; 
-    }
+    .phase-bar { height: 60px; width: 100%; margin: 0 0 25px 0; border-radius: 16px; overflow: hidden; background: #1f2937; display: flex; box-shadow: 0 6px 25px rgba(0,0,0,0.5); }
+    .phase-segment { flex: 1; display: flex; align-items: center; justify-content: center; font-weight: bold; color: white; text-shadow: 1px 1px 3px black; font-size: 0.9em; transition: all 0.3s; border: 1px solid transparent; }
+    .phase-segment:hover { transform: scale(1.05); box-shadow: inset 0 0 15px rgba(255,255,255,0.4); }
+    .current-phase { background: #22c55e !important; border: 3px solid #86efac; box-shadow: inset 0 0 20px rgba(255,255,255,0.5); font-size: 1.1em; font-weight: 900; }
     .euphoria { color: #ff6b6b !important; font-weight: 900; }
+    .daily-summary { margin-top: 20px; padding: 15px; background: #21262d; border-radius: 12px; box-shadow: 0 6px 25px rgba(0,0,0,0.4); }
+    .summary-item { margin-bottom: 10px; font-size: 1.1em; }
     @media (max-width: 900px) { .container { flex-direction: column; } .sidebar { order: 2; } .chart-area { order: 1; height: 500px; } }
   </style>
 </head>
@@ -141,6 +56,10 @@
         <div class="phase-segment euphoria">Euphoria</div>
       </div>
       <canvas id="myChart"></canvas>
+      <div id="dailySummary" class="daily-summary">
+        <h3>Daily Market Summary</h3>
+        <div class="loading">Loading daily summary...</div>
+      </div>
     </div>
 
     <div class="sidebar">
@@ -193,25 +112,19 @@
         responsive: true,
         maintainAspectRatio: false,
         scales: {
-          x: { 
-            type: 'time', 
-            time: { unit: 'day' }, // Locked to daily
-            ticks: { maxRotation: 45, autoSkip: true, maxTicksLimit: 12 },
-            title: { display: true, text: 'Time' }
-          },
+          x: { type: 'time', time: { unit: 'day' }, ticks: { maxRotation: 45, autoSkip: true, maxTicksLimit: 12 }, title: { display: true, text: 'Time' } },
           y: { min: 0, max: 100, title: { display: true, text: 'Flow Cycle Index' } }
         },
         plugins: {
           zoom: {
             zoom: {
-              wheel: { enabled: false }, // Disable wheel zoom to avoid conflict
-              drag: { enabled: true, mode: 'y' }, // Drag up/down for y-axis zoom
+              wheel: { enabled: true },
               pinch: { enabled: true },
-              mode: 'y' // Only zoom y-axis with drag
+              mode: 'xy'
             },
             pan: {
               enabled: true,
-              mode: 'x' // Pan left/right on x-axis with drag
+              mode: 'xy'
             }
           },
           annotation: {
@@ -266,7 +179,7 @@
       }
     });
 
-    // Status badge shows current phase from data
+    // Update status badge
     document.getElementById('statusBadge').innerHTML = `🟡 ${currentPhase}`;
     document.getElementById('statusBadge').style.background = '#ffeb3b';
     document.getElementById('statusBadge').style.color = 'white';
@@ -278,14 +191,17 @@
       euphoriaSpan.style.fontWeight = '900';
     }
 
-    // Live prices
+    // Live prices with debug
     async function fetchLiveData() {
       try {
+        console.log('Starting price fetch...');
         const response = await fetch('https://pro-api.coingecko.com/api/v3/coins/markets?vs_currency=usd&ids=bitcoin,ethereum,solana,bnb&order=market_cap_desc&per_page=4&page=1&sparkline=false&price_change_percentage=24h', {
           headers: { 'x-cg-pro-api-key': 'CG-16CjgPwWeLeNVZnNRmrfXiUz' }
         });
+        console.log('Response status:', response.status);
         if (!response.ok) throw new Error(`API error: ${response.status}`);
         const data = await response.json();
+        console.log('Prices data:', data);
         const pricesDiv = document.getElementById('prices');
         pricesDiv.innerHTML = '';
         data.forEach(coin => {
@@ -299,6 +215,7 @@
           pricesDiv.appendChild(div);
         });
       } catch (e) {
+        console.error('Price fetch error:', e);
         document.getElementById('prices').innerHTML = '<p style="color:#f85149;">Live prices failed — refresh</p>';
       }
     }
