--- a/index.html
+++ b/index.html
@@ -29,8 +29,6 @@
     .phase-segment:hover { transform: scale(1.05); box-shadow: inset 0 0 15px rgba(255,255,255,0.4); }
     .current-phase { background: #22c55e !important; border: 3px solid #86efac; box-shadow: inset 0 0 20px rgba(255,255,255,0.5); font-size: 1.1em; font-weight: 900; }
     .euphoria { color: #ff6b6b !important; font-weight: 900; }
-    .daily-summary { margin-top: 20px; padding: 15px; background: #21262d; border-radius: 12px; box-shadow: 0 6px 25px rgba(0,0,0,0.4); }
-    .summary-item { margin-bottom: 10px; font-size: 1.1em; }
     @media (max-width: 900px) { .container { flex-direction: column; } .sidebar { order: 2; } .chart-area { order: 1; height: 500px; } }
   </style>
 </head>
@@ -56,10 +54,6 @@
         <div class="phase-segment euphoria">Euphoria</div>
       </div>
       <canvas id="myChart"></canvas>
-      <div id="dailySummary" class="daily-summary">
-        <h3>Daily Market Summary</h3>
-        <div class="loading">Loading daily summary...</div>
-      </div>
     </div>
 
     <div class="sidebar">
@@ -155,34 +149,46 @@
       }
     });
 
-    // === PHASE HIGHLIGHT ===
-    const currentIndex = predictorIndex[predictorIndex.length - 1] || 0;
-    let currentPhase = 'Complacency';
-    if (currentIndex > 10) currentPhase = 'Anxiety';
-    if (currentIndex > 20) currentPhase = 'Denial';
-    if (currentIndex > 30) currentPhase = 'Panic';
-    if (currentIndex > 40) currentPhase = 'Capitulation';
-    if (currentIndex > 50) currentPhase = 'Anger';
-    if (currentIndex > 60) currentPhase = 'Depression';
-    if (currentIndex > 70) currentPhase = 'Disbelief';
-    if (currentIndex > 75) currentPhase = 'Hope';
-    if (currentIndex > 80) currentPhase = 'Optimism';
-    if (currentIndex > 85) currentPhase = 'Belief';
-    if (currentIndex > 90) currentPhase = 'Thrill';
-    if (currentIndex > 95) currentPhase = 'Euphoria';
+    // === PHASE HIGHLIGHT BASED ON VISIBLE RANGE ===
+    function updatePhaseHighlight() {
+      const visibleRange = chart.scales.x.getVisibleRange();
+      const visiblePoints = predictorIndex.filter((_, i) => {
+        const date = new Date(labels[i]);
+        return date >= visibleRange.min && date <= visibleRange.max;
+      });
 
-    // Highlight matching phase with green square
-    const segments = document.querySelectorAll('.phase-segment');
-    segments.forEach(segment => {
-      if (segment.textContent.trim() === currentPhase) {
-        segment.classList.add('current-phase');
-      }
-    });
+      const avgIndex = visiblePoints.length > 0 ? visiblePoints.reduce((a, b) => a + b, 0) / visiblePoints.length : currentIndex;
+      let currentPhase = 'Complacency';
+      if (avgIndex > 10) currentPhase = 'Anxiety';
+      if (avgIndex > 20) currentPhase = 'Denial';
+      if (avgIndex > 30) currentPhase = 'Panic';
+      if (avgIndex > 40) currentPhase = 'Capitulation';
+      if (avgIndex > 50) currentPhase = 'Anger';
+      if (avgIndex > 60) currentPhase = 'Depression';
+      if (avgIndex > 70) currentPhase = 'Disbelief';
+      if (avgIndex > 75) currentPhase = 'Hope';
+      if (avgIndex > 80) currentPhase = 'Optimism';
+      if (avgIndex > 85) currentPhase = 'Belief';
+      if (avgIndex > 90) currentPhase = 'Thrill';
+      if (avgIndex > 95) currentPhase = 'Euphoria';
 
-    // Update status badge
-    document.getElementById('statusBadge').innerHTML = `🟡 ${currentPhase}`;
-    document.getElementById('statusBadge').style.background = '#ffeb3b';
-    document.getElementById('statusBadge').style.color = 'white';
+      // Highlight matching phase
+      const segments = document.querySelectorAll('.phase-segment');
+      segments.forEach(segment => segment.classList.remove('current-phase'));
+      segments.forEach(segment => {
+        if (segment.textContent.trim() === currentPhase) {
+          segment.classList.add('current-phase');
+        }
+      });
+
+      // Update badge
+      document.getElementById('statusBadge').innerHTML = `🟡 ${currentPhase}`;
+    }
+
+    // Run on load and on zoom/pan
+    chart.options.plugins.zoom.zoom.onZoom = updatePhaseHighlight;
+    chart.options.plugins.zoom.pan.onPan = updatePhaseHighlight;
+    updatePhaseHighlight(); // Initial highlight
 
     // Force Euphoria red
     const euphoriaSpan = document.querySelector('.phase-segment:last-child');
@@ -191,17 +197,14 @@
       euphoriaSpan.style.fontWeight = '900';
     }
 
-    // Live prices with debug
+    // Live prices
     async function fetchLiveData() {
       try {
-        console.log('Starting price fetch...');
         const response = await fetch('https://pro-api.coingecko.com/api/v3/coins/markets?vs_currency=usd&ids=bitcoin,ethereum,solana,bnb&order=market_cap_desc&per_page=4&page=1&sparkline=false&price_change_percentage=24h', {
           headers: { 'x-cg-pro-api-key': 'CG-16CjgPwWeLeNVZnNRmrfXiUz' }
         });
-        console.log('Response status:', response.status);
         if (!response.ok) throw new Error(`API error: ${response.status}`);
         const data = await response.json();
-        console.log('Prices data:', data);
         const pricesDiv = document.getElementById('prices');
         pricesDiv.innerHTML = '';
         data.forEach(coin => {
@@ -215,7 +218,6 @@
           pricesDiv.appendChild(div);
         });
       } catch (e) {
-        console.error('Price fetch error:', e);
         document.getElementById('prices').innerHTML = '<p style="color:#f85149;">Live prices failed — refresh</p>';
       }
     }
