--- a/index.html
+++ b/index.html
@@ -9,99 +9,28 @@
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom@2.0.1"></script>
   <style>
-    body { 
-      font-family: system-ui, -apple-system, sans-serif; 
-      margin: 0; 
-      background: #0d1117; 
-      color: #c9d1d9; 
-      line-height: 1.6; 
-    }
-    .main-title { 
-      text-align: center; 
-      color: #58a6ff; 
-      margin: 30px 0 10px; 
-      font-size: 3em; 
-      font-weight: 700; 
-    }
-    .subtitle { 
-      text-align: center; 
-      color: #8b949e; 
-      margin-bottom: 30px; 
-      font-size: 1.3em; 
-    }
-    .container { 
-      display: flex; 
-      flex-wrap: wrap; 
-      gap: 30px; 
-      max-width: 1600px; 
-      margin: 0 auto; 
-      padding: 0 20px; 
-    }
-    .chart-area { 
-      flex: 3; 
-      min-width: 700px; 
-      height: 800px; 
-      background: #161b22; 
-      border-radius: 16px; 
-      padding: 25px; 
-      box-shadow: 0 10px 40px rgba(0,0,0,0.6); 
-    }
-    .sidebar { 
-      flex: 1; 
-      min-width: 340px; 
-      background: #161b22; 
-      padding: 25px; 
-      border-radius: 16px; 
-      box-shadow: 0 10px 40px rgba(0,0,0,0.6); 
-      overflow-y: auto; 
-      max-height: 800px; 
-    }
-    .status-badge { 
-      font-size: 3em; 
-      margin: 0 0 30px; 
-      padding: 20px; 
-      border-radius: 16px; 
-      text-align: center; 
-      font-weight: 700; 
-      box-shadow: 0 6px 25px rgba(0,0,0,0.5); 
-    }
-    .price-item { 
-      margin: 20px 0; 
-      padding: 18px; 
-      border-radius: 12px; 
-      background: #21262d; 
-      transition: all 0.2s; 
-    }
-    .price-item:hover { 
-      transform: translateY(-4px); 
-      box-shadow: 0 8px 30px rgba(0,0,0,0.4); 
-    }
-    #alertBox, #actionAdvice, #previousCalls, #predictionAccuracy { 
-      margin: 30px 0; 
-      padding: 20px; 
-      border-radius: 12px; 
-      font-size: 1.4em; 
-      box-shadow: 0 6px 25px rgba(0,0,0,0.4); 
-    }
-    #actionAdvice { background: #2c0e0e; color: #ff6b6b; }
-    #previousCalls { background: #161b22; border: 1px solid #30363d; }
-    #predictionAccuracy { background: #161b22; border: 1px solid #30363d; text-align: center; }
-    #confidenceGauge { width: 200px; height: 200px; margin: 30px auto; }
-    .phase-bar { 
-      height: 40px; 
-      width: 100%; 
-      margin: 0 0 20px 0; 
-      border-radius: 12px; 
-      overflow: hidden; 
-      display: flex; 
-      box-shadow: 0 4px 20px rgba(0,0,0,0.5); 
-    }
-    .phase-segment { flex: 1; display: flex; align-items: center; justify-content: center; font-weight: bold; color: white; text-shadow: 1px 1px 3px black; }
+    body { font-family: system-ui, sans-serif; margin: 0; background: #0d1117; color: #c9d1d9; line-height: 1.6; }
+    .main-title { text-align: center; color: #58a6ff; margin: 30px 0 10px; font-size: 3em; font-weight: 700; }
+    .subtitle { text-align: center; color: #8b949e; margin-bottom: 30px; font-size: 1.3em; }
+    .container { display: flex; flex-wrap: wrap; gap: 30px; max-width: 1600px; margin: 0 auto; padding: 0 20px; }
+    .chart-area { flex: 3; min-width: 700px; height: 800px; background: #161b22; border-radius: 16px; padding: 25px; box-shadow: 0 10px 40px rgba(0,0,0,0.6); }
+    .sidebar { flex: 1; min-width: 340px; background: #161b22; padding: 25px; border-radius: 16px; box-shadow: 0 10px 40px rgba(0,0,0,0.6); overflow-y: auto; max-height: 800px; }
+    .status-badge { font-size: 2em; margin: 0 0 30px; padding: 15px; border-radius: 16px; text-align: center; font-weight: 700; box-shadow: 0 6px 25px rgba(0,0,0,0.5); }
+    .price-item { margin: 20px 0; padding: 18px; border-radius: 12px; background: #21262d; transition: all 0.2s; }
+    .price-item:hover { transform: translateY(-4px); box-shadow: 0 8px 30px rgba(0,0,0,0.4); }
+    #actionAdvice { background: #2c0e0e; color: #ff6b6b; padding: 15px; border-radius: 12px; margin-bottom: 20px; }
     .loading { color: #8b949e; text-align: center; margin: 30px 0; font-style: italic; }
     .collapsible-section { margin: 15px 0; }
-    .collapsible-header { cursor: pointer; padding: 8px; background: #21262d; border-radius: 6px; font-weight: bold; transition: all 0.2s; }
-    .collapsible-content { display: none; padding: 8px; background: #161b22; border-radius: 0 0 6px 6px; }
+    .collapsible-header { cursor: pointer; padding: 10px; background: #21262d; border-radius: 8px; font-weight: bold; transition: all 0.2s; }
+    .collapsible-content { display: none; padding: 10px; background: #161b22; border-radius: 0 0 8px 8px; }
     .open .collapsible-content { display: block; }
+    .phase-bar { height: 60px; width: 100%; margin: 0 0 25px 0; border-radius: 16px; overflow: hidden; background: #1f2937; display: flex; box-shadow: 0 6px 25px rgba(0,0,0,0.5); }
+    .phase-segment { flex: 1; display: flex; align-items: center; justify-content: center; font-weight: bold; color: white; text-shadow: 1px 1px 3px black; font-size: 0.9em; transition: all 0.3s; border: 1px solid transparent; }
+    .phase-segment:hover { transform: scale(1.05); box-shadow: inset 0 0 15px rgba(255,255,255,0.4); }
+    .current-phase { background: #22c55e !important; border: 3px solid #86efac; box-shadow: inset 0 0 20px rgba(255,255,255,0.5); font-size: 1.1em; font-weight: 900; }
+    .euphoria { color: #ff6b6b !important; font-weight: 900; }
+    .daily-summary { margin-top: 20px; padding: 15px; background: #21262d; border-radius: 12px; box-shadow: 0 6px 25px rgba(0,0,0,0.4); }
+    .summary-item { margin-bottom: 10px; font-size: 1.1em; }
     @media (max-width: 900px) { .container { flex-direction: column; } .sidebar { order: 2; } .chart-area { order: 1; height: 500px; } }
   </style>
 </head>
@@ -112,13 +41,25 @@
   <div class="container">
     <div class="chart-area">
       <div class="phase-bar">
-        <div class="phase-segment" style="background:#ff6b6b;">Euphoria</div>
-        <div class="phase-segment" style="background:#ffab91;">Thrill/Retail</div>
-        <div class="phase-segment" style="background:#8bc34a;">Belief/Breakout</div>
-        <div class="phase-segment" style="background:#fff176;">Hope</div>
-        <div class="phase-segment" style="background:#4caf50;">Current</div>
+        <div class="phase-segment">Complacency</div>
+        <div class="phase-segment">Anxiety</div>
+        <div class="phase-segment">Denial</div>
+        <div class="phase-segment">Panic</div>
+        <div class="phase-segment">Capitulation</div>
+        <div class="phase-segment">Anger</div>
+        <div class="phase-segment">Depression</div>
+        <div class="phase-segment">Disbelief</div>
+        <div class="phase-segment">Hope</div>
+        <div class="phase-segment">Optimism</div>
+        <div class="phase-segment">Belief</div>
+        <div class="phase-segment">Thrill</div>
+        <div class="phase-segment euphoria">Euphoria</div>
       </div>
       <canvas id="myChart"></canvas>
+      <div id="dailySummary" class="daily-summary">
+        <h3>Daily Market Summary</h3>
+        <div class="loading">Loading daily summary...</div>
+      </div>
     </div>
 
     <div class="sidebar">
@@ -128,22 +69,19 @@
       <div id="prices"><div class="loading">Loading live prices...</div></div>
       <div class="collapsible-section">
         <div class="collapsible-header" onclick="this.parentElement.classList.toggle('open')">Previous Bottom Calls (click to expand)</div>
-        <div id="previousBottoms" class="collapsible-content"><strong>No calls yet</strong></div>
+        <div id="previousBottoms" class="collapsible-content"><strong>Loading...</strong></div>
       </div>
       <div class="collapsible-section">
         <div class="collapsible-header" onclick="this.parentElement.classList.toggle('open')">Previous Top Calls (click to expand)</div>
-        <div id="previousTops" class="collapsible-content"><strong>No calls yet</strong></div>
+        <div id="previousTops" class="collapsible-content"><strong>Loading...</strong></div>
       </div>
     </div>
   </div>
 
-  <div id="alertBox"></div>
-  <div id="predictionsBox"></div>
-  <div id="predictionAccuracy">Prediction vs Live: Updating...</div>
-
   <script>
     // === MAIN CHART ===
     const ctx = document.getElementById('myChart').getContext('2d');
+
     const labels = ['2017-01', '2017-10', '2017-12', '2018-12', '2020-03', '2021-11', '2022-11', '2025-04', '2025-11', '2026-01', '2026-04', '2026-07', '2026-10', '2027-01', '2027-04', '2027-07', '2027-10', '2028-01'];
     const predictorIndex = [40, 45, 95, 10, 10, 90, 15, 25, 10, 51, null, null, null, null, null, null, null, null];
     let predictionData = [];
@@ -174,12 +112,7 @@
         responsive: true,
         maintainAspectRatio: false,
         scales: {
-          x: { 
-            type: 'time', 
-            time: { unit: 'month' }, 
-            ticks: { maxRotation: 45, autoSkip: true, maxTicksLimit: 12 },
-            title: { display: true, text: 'Time' }
-          },
+          x: { type: 'time', time: { unit: 'day' }, ticks: { maxRotation: 45, autoSkip: true, maxTicksLimit: 12 }, title: { display: true, text: 'Time' } },
           y: { min: 0, max: 100, title: { display: true, text: 'Flow Cycle Index' } }
         },
         plugins: {
