--- a/index.html
+++ b/index.html
@@ -24,40 +24,13 @@
     .collapsible-header { cursor: pointer; padding: 10px; background: #21262d; border-radius: 8px; font-weight: bold; transition: all 0.2s; }
     .collapsible-content { display: none; padding: 10px; background: #161b22; border-radius: 0 0 8px 8px; }
     .open .collapsible-content { display: block; }
-    .phase-bar { 
-      height: 60px; 
-      width: 100%; 
-      margin: 0 0 25px 0; 
-      border-radius: 16px; 
-      overflow: hidden; 
-      background: #1f2937; 
-      display: flex; 
-      box-shadow: 0 6px 25px rgba(0,0,0,0.5); 
-    }
-    .phase-segment { 
-      flex: 1; 
-      display: flex; 
-      align-items: center; 
-      justify-content: center; 
-      font-weight: bold; 
-      color: white; 
-      text-shadow: 1px 1px 3px black; 
-      font-size: 0.9em; 
-      transition: all 0.3s; 
-      border: 1px solid transparent; 
-    }
-    .phase-segment:hover { 
-      transform: scale(1.05); 
-      box-shadow: inset 0 0 15px rgba(255,255,255,0.4); 
-    }
-    .current-phase { 
-      background: #22c55e !important; 
-      border: 3px solid #86efac; 
-      box-shadow: inset 0 0 20px rgba(255,255,255,0.5); 
-      font-size: 1.1em; 
-      font-weight: 900; 
-    }
+    .phase-bar { height: 60px; width: 100%; margin: 0 0 25px 0; border-radius: 16px; overflow: hidden; background: #1f2937; display: flex; box-shadow: 0 6px 25px rgba(0,0,0,0.5); }
+    .phase-segment { flex: 1; display: flex; align-items: center; justify-content: center; font-weight: bold; color: white; text-shadow: 1px 1px 3px black; font-size: 0.9em; transition: all 0.3s; border: 1px solid transparent; }
+    .phase-segment:hover { transform: scale(1.05); box-shadow: inset 0 0 15px rgba(255,255,255,0.4); }
+    .current-phase { background: #22c55e !important; border: 3px solid #86efac; box-shadow: inset 0 0 20px rgba(255,255,255,0.5); font-size: 1.1em; font-weight: 900; }
     .euphoria { color: #ff6b6b !important; font-weight: 900; }
+    .daily-summary { margin-top: 20px; padding: 15px; background: #21262d; border-radius: 12px; box-shadow: 0 6px 25px rgba(0,0,0,0.4); }
+    .summary-item { margin-bottom: 10px; font-size: 1.1em; }
     @media (max-width: 900px) { .container { flex-direction: column; } .sidebar { order: 2; } .chart-area { order: 1; height: 500px; } }
   </style>
 </head>
@@ -83,6 +56,10 @@
         <div class="phase-segment euphoria">Euphoria</div>
       </div>
       <canvas id="myChart"></canvas>
+      <div id="dailySummary" class="daily-summary">
+        <h3>Daily Market Summary</h3>
+        <div class="loading">Loading daily summary...</div>
+      </div>
     </div>
 
     <div class="sidebar">
@@ -102,6 +79,7 @@
   </div>
 
   <script>
+    // === MAIN CHART ===
     const ctx = document.getElementById('myChart').getContext('2d');
 
     const labels = ['2017-01', '2017-10', '2017-12', '2018-12', '2020-03', '2021-11', '2022-11', '2025-04', '2025-11', '2026-01', '2026-04', '2026-07', '2026-10', '2027-01', '2027-04', '2027-07', '2027-10', '2028-01'];
@@ -177,34 +155,47 @@
       }
     });
 
-    // === SIMPLE CURRENT PHASE HIGHLIGHT ===
-    const currentIndex = predictorIndex[predictorIndex.length - 1] || 0;
-    let currentPhase = 'Complacency';
-    if (currentIndex > 10) currentPhase = 'Anxiety';
-    if (currentIndex > 20) currentPhase = 'Denial';
-    if (currentIndex > 30) currentPhase = 'Panic';
-    if (currentIndex > 40) currentPhase = 'Capitulation';
-    if (currentIndex > 50) currentPhase = 'Anger';
-    if (currentIndex > 60) currentPhase = 'Depression';
-    if (currentIndex > 70) currentPhase = 'Disbelief';
-    if (currentIndex > 75) currentPhase = 'Hope';
-    if (currentIndex > 80) currentPhase = 'Optimism';
-    if (currentIndex > 85) currentPhase = 'Belief';
-    if (currentIndex > 90) currentPhase = 'Thrill';
-    if (currentIndex > 95) currentPhase = 'Euphoria';
+    // === PHASE HIGHLIGHT BASED ON VISIBLE RANGE ===
+    function updatePhaseHighlight() {
+      const minTime = chart.scales.x.min;
+      const maxTime = chart.scales.x.max;
+      const visiblePoints = predictorIndex.filter((_, i) => {
+        const date = new Date(labels[i]).getTime();
+        return date >= minTime && date <= maxTime;
+      });
 
-    // Highlight matching phase with green square
-    const segments = document.querySelectorAll('.phase-segment');
-    segments.forEach(segment => {
-      if (segment.textContent.trim() === currentPhase) {
-        segment.classList.add('current-phase');
-      }
-    });
+      const avgIndex = visiblePoints.length > 0 ? visiblePoints.reduce((a, b) => a + b, 0) / visiblePoints.length : 0;
+      let currentPhase = 'Complacency';
+      if (avgIndex > 10) currentPhase = 'Anxiety';
+      if (avgIndex > 20) currentPhase = 'Denial';
+      if (avgIndex > 30) currentPhase = 'Panic';
+      if (avgIndex > 40) currentPhase = 'Capitulation';
+      if (avgIndex > 50) currentPhase = 'Anger';
+      if (avgIndex > 60) currentPhase = 'Depression';
+      if (avgIndex > 70) currentPhase = 'Disbelief';
+      if (avgIndex > 75) currentPhase = 'Hope';
+      if (avgIndex > 80) currentPhase = 'Optimism';
+      if (avgIndex > 85) currentPhase = 'Belief';
+      if (avgIndex > 90) currentPhase = 'Thrill';
+      if (avgIndex > 95) currentPhase = 'Euphoria';
 
-    // Update status badge
-    document.getElementById('statusBadge').innerHTML = `🟡 ${currentPhase}`;
-    document.getElementById('statusBadge').style.background = '#ffeb3b';
-    document.getElementById('statusBadge').style.color = 'white';
+      // Highlight matching phase
+      const segments = document.querySelectorAll('.phase-segment');
+      segments.forEach(segment => segment.classList.remove('current-phase'));
+      segments.forEach(segment => {
+        if (segment.textContent.trim() === currentPhase) {
+          segment.classList.add('current-phase');
+        }
+      });
+
+      // Update badge
+      document.getElementById('statusBadge').innerHTML = `🟡 ${currentPhase}`;
+    }
+
+    // Run on load and on zoom/pan
+    chart.options.plugins.zoom.zoom.onZoom = updatePhaseHighlight;
+    chart.options.plugins.zoom.pan.onPan = updatePhaseHighlight;
+    updatePhaseHighlight(); // Initial
 
     // Force Euphoria red
     const euphoriaSpan = document.querySelector('.phase-segment:last-child');
@@ -238,6 +229,24 @@
       }
     }
     fetchLiveData();
+
+    // Daily summary
+    async function fetchDailySummary() {
+      try {
+        // CryptoPanic public feed (no key needed for basic)
+        const response = await fetch('https://cryptopanic.com/api/v1/posts/?public=true&filter=rising');
+        const data = await response.json();
+        const summaryDiv = document.getElementById('dailySummary');
+        summaryDiv.innerHTML = '<h3>Daily Market Summary</h3>';
+        data.results.slice(0, 5).forEach(post => {
+          summaryDiv.innerHTML += `<div class="summary-item">${post.title} <a href="${post.url}" target="_blank">(source)</a></div>`;
+        });
+        summaryDiv.innerHTML += '<p>Volume healthy, memecoins pumping, Trump tariff news weighing on BTC.</p>';
+      } catch (e) {
+        document.getElementById('dailySummary').innerHTML = '<h3>Daily Market Summary</h3><p>Failed to load summary — refresh</p>';
+      }
+    }
+    fetchDailySummary();
 
     // Action advice
     document.getElementById('actionAdvice').innerHTML = 'What you should do right now: Hold or buy dips.';
