--- a/index.html
+++ b/index.html
@@ -9,15 +9,73 @@
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom@2.0.1"></script>
   <style>
-    body { font-family: system-ui, sans-serif; margin: 0; background: #0d1117; color: #c9d1d9; line-height: 1.6; }
-    .main-title { text-align: center; color: #58a6ff; margin: 30px 0 10px; font-size: 3em; font-weight: 700; }
-    .subtitle { text-align: center; color: #8b949e; margin-bottom: 30px; font-size: 1.3em; }
-    .container { display: flex; flex-wrap: wrap; gap: 30px; max-width: 1600px; margin: 0 auto; padding: 0 20px; }
-    .chart-area { flex: 3; min-width: 700px; height: 800px; background: #161b22; border-radius: 16px; padding: 25px; box-shadow: 0 10px 40px rgba(0,0,0,0.6); }
-    .sidebar { flex: 1; min-width: 340px; background: #161b22; padding: 25px; border-radius: 16px; box-shadow: 0 10px 40px rgba(0,0,0,0.6); overflow-y: auto; max-height: 800px; }
-    .status-badge { font-size: 2em; margin: 0 0 30px; padding: 15px; border-radius: 16px; text-align: center; font-weight: 700; box-shadow: 0 6px 25px rgba(0,0,0,0.5); }
-    .price-item { margin: 20px 0; padding: 18px; border-radius: 12px; background: #21262d; transition: all 0.2s; }
-    .price-item:hover { transform: translateY(-4px); box-shadow: 0 8px 30px rgba(0,0,0,0.4); }
+    body { 
+      font-family: system-ui, -apple-system, sans-serif; 
+      margin: 0; 
+      background: #0d1117; 
+      color: #c9d1d9; 
+      line-height: 1.6; 
+    }
+    .main-title { 
+      text-align: center; 
+      color: #58a6ff; 
+      margin: 30px 0 10px; 
+      font-size: 3em; 
+      font-weight: 700; 
+    }
+    .subtitle { 
+      text-align: center; 
+      color: #8b949e; 
+      margin-bottom: 30px; 
+      font-size: 1.3em; 
+    }
+    .container { 
+      display: flex; 
+      flex-wrap: wrap; 
+      gap: 30px; 
+      max-width: 1600px; 
+      margin: 0 auto; 
+      padding: 0 20px; 
+    }
+    .chart-area { 
+      flex: 3; 
+      min-width: 700px; 
+      height: 800px; 
+      background: #161b22; 
+      border-radius: 16px; 
+      padding: 25px; 
+      box-shadow: 0 10px 40px rgba(0,0,0,0.6); 
+    }
+    .sidebar { 
+      flex: 1; 
+      min-width: 340px; 
+      background: #161b22; 
+      padding: 25px; 
+      border-radius: 16px; 
+      box-shadow: 0 10px 40px rgba(0,0,0,0.6); 
+      overflow-y: auto; 
+      max-height: 800px; 
+    }
+    .status-badge { 
+      font-size: 3em; 
+      margin: 0 0 30px; 
+      padding: 20px; 
+      border-radius: 16px; 
+      text-align: center; 
+      font-weight: 700; 
+      box-shadow: 0 6px 25px rgba(0,0,0,0.5); 
+    }
+    .price-item { 
+      margin: 20px 0; 
+      padding: 18px; 
+      border-radius: 12px; 
+      background: #21262d; 
+      transition: all 0.2s; 
+    }
+    .price-item:hover { 
+      transform: translateY(-4px); 
+      box-shadow: 0 8px 30px rgba(0,0,0,0.4); 
+    }
     #actionAdvice { background: #2c0e0e; color: #ff6b6b; padding: 15px; border-radius: 12px; margin-bottom: 20px; }
     .loading { color: #8b949e; text-align: center; margin: 30px 0; font-style: italic; }
     .collapsible-section { margin: 15px 0; }
@@ -155,34 +213,47 @@
       }
     });
 
-    // === PHASE HIGHLIGHT BASED ON LAST POINT ===
-    const currentIndex = predictorIndex[predictorIndex.length - 1] || 0;
-    let currentPhase = 'Complacency';
-    if (currentIndex > 10) currentPhase = 'Anxiety';
-    if (currentIndex > 20) currentPhase = 'Denial';
-    if (currentIndex > 30) currentPhase = 'Panic';
-    if (currentIndex > 40) currentPhase = 'Capitulation';
-    if (currentIndex > 50) currentPhase = 'Anger';
-    if (currentIndex > 60) currentPhase = 'Depression';
-    if (currentIndex > 70) currentPhase = 'Disbelief';
-    if (currentIndex > 75) currentPhase = 'Hope';
-    if (currentIndex > 80) currentPhase = 'Optimism';
-    if (currentIndex > 85) currentPhase = 'Belief';
-    if (currentIndex > 90) currentPhase = 'Thrill';
-    if (currentIndex > 95) currentPhase = 'Euphoria';
+    // === PHASE HIGHLIGHT BASED ON VISIBLE RANGE ===
+    function updatePhaseHighlight() {
+      const minTime = chart.scales.x.min;
+      const maxTime = chart.scales.x.max;
+      const visiblePoints = predictorIndex.filter((_, i) => {
+        const date = new Date(labels[i]).getTime();
+        return date >= minTime && date <= maxTime;
+      });
 
-    // Highlight matching phase with green square
-    const segments = document.querySelectorAll('.phase-segment');
-    segments.forEach(segment => {
-      if (segment.textContent.trim() === currentPhase) {
-        segment.classList.add('current-phase');
-      }
-    });
+      const avgIndex = visiblePoints.length > 0 ? visiblePoints.reduce((a, b) => a + b, 0) / visiblePoints.length : 0;
+      let currentPhase = 'Complacency';
+      if (avgIndex > 10) currentPhase = 'Anxiety';
+      if (avgIndex > 20) currentPhase = 'Denial';
+      if (avgIndex > 30) currentPhase = 'Panic';
+      if (avgIndex > 40) currentPhase = 'Capitulation';
+      if (avgIndex > 50) currentPhase = 'Anger';
+      if (avgIndex > 60) currentPhase = 'Depression';
+      if (avgIndex > 70) currentPhase = 'Disbelief';
+      if (avgIndex > 75) currentPhase = 'Hope';
+      if (avgIndex > 80) currentPhase = 'Optimism';
+      if (avgIndex > 85) currentPhase = 'Belief';
+      if (avgIndex > 90) currentPhase = 'Thrill';
+      if (avgIndex > 95) currentPhase = 'Euphoria';
 
-    // Update status badge
-    document.getElementById('statusBadge').innerHTML = `🟡 ${currentPhase}`;
-    document.getElementById('statusBadge').style.background = '#ffeb3b';
-    document.getElementById('statusBadge').style.color = 'white';
+      // Highlight matching phase
+      const segments = document.querySelectorAll('.phase-segment');
+      segments.forEach(segment => segment.classList.remove('current-phase'));
+      segments.forEach(segment => {
+        if (segment.textContent.trim() === currentPhase) {
+          segment.classList.add('current-phase');
+        }
+      });
+
+      // Update badge
+      document.getElementById('statusBadge').innerHTML = `🟡 ${currentPhase}`;
+    }
+
+    // Run on load and on zoom/pan
+    chart.options.plugins.zoom.zoom.onZoom = updatePhaseHighlight;
+    chart.options.plugins.zoom.pan.onPan = updatePhaseHighlight;
+    updatePhaseHighlight(); // Initial
 
     // Force Euphoria red
     const euphoriaSpan = document.querySelector('.phase-segment:last-child');
@@ -220,6 +291,7 @@
     // Daily summary
     async function fetchDailySummary() {
       try {
+        // CryptoPanic public feed (no key needed for basic)
         const response = await fetch('https://cryptopanic.com/api/v1/posts/?public=true&filter=rising');
         const data = await response.json();
         const summaryDiv = document.getElementById('dailySummary');
@@ -234,8 +306,12 @@
     }
     fetchDailySummary();
 
-    // Action advice
-    document.getElementById('actionAdvice').innerHTML = 'What you should do right now: Hold or buy dips.';
+    // Action advice dynamic based on phase
+    let actionText = 'Hold or buy dips';
+    if (currentPhase === 'Euphoria' || currentPhase === 'Thrill') actionText = 'Sell high';
+    if (currentPhase === 'Depression' || currentPhase === 'Anger') actionText = 'Buy low';
+    if (currentPhase === 'Hope' || currentPhase === 'Disbelief') actionText = 'Accumulate';
+    document.getElementById('actionAdvice').innerHTML = 'What you should do right now: ' + actionText;
   </script>
 </body>
 </html>
